--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DataChess">
-        <activity android:name=".matchRecord">
+        <activity android:name=".playerList"></activity>
+        <activity android:name=".matchRecord"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FirstPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".FirstPage">
-
         </activity>
     </application>
 
