--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DataChess">
-        <activity android:name=".playerList"></activity>
-        <activity android:name=".matchRecord"></activity>
+        <activity
+            android:name=".Result"
+            android:label="@string/title_activity_result"
+            android:theme="@style/Theme.DataChess.NoActionBar"></activity>
+        <activity android:name=".playeInfo" />
+        <activity android:name=".addPlayer" />
+        <activity android:name=".playerList" />
+        <activity android:name=".matchRecord" />
         <activity android:name=".MainActivity" />
         <activity android:name=".FirstPage">
             <intent-filter>
